--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
-node_modules
-dist
-.DS_Store
-*.log
+# Dependencies
+node_modules/
+package-lock.json
 
+# Build outputs
+dist/
+*.tgz
+
+# Testing
+coverage/
+.nyc_output/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+.DS_Store
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temporary files
+*.tmp
+*.temp
