--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bentogrid",
+  "name": "bentogreed",
   "version": "0.1.0",
   "description": "A lightweight, framework-agnostic library for generating bento grid layouts",
   "type": "module",
