--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:lib": "vite build --config vite.config.lib.ts",
     "build:demo": "vite build",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "vitest --run",
     "test:watch": "vitest --watch",
     "prepublishOnly": "npm run build && npm test"
   },
